force-app/main/default/objects/Travel_Policy_Rule__mdt/Travel_Policy_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Travel Policy Rule</label>
    <pluralLabel>Travel Policy Rules</pluralLabel>
</CustomObject>