force-app/main/default/objects/Travel_Policy_Rule__mdt/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Text</type>
    <length>50</length>
</CustomField>