force-app/main/default/objects/Travel_Policy_Rule__mdt/fields/Max_Amount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount_Limit__c</fullName>
    <label>Max Amount Limit</label>
    <type>Number</type>
    <precision>16</precision><scale>2</scale>
</CustomField>