force-app/main/default/objects/Travel_Policy_Rule__mdt/fields/Receipt_Required_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Required_Threshold__c</fullName>
    <label>Receipt Required Threshold</label>
    <type>Number</type>
    <precision>16</precision><scale>2</scale>
</CustomField>