force-app/main/default/objects/Travel_Policy_Rule__mdt/fields/Require_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Require_Receipt__c</fullName>
    <label>Require Receipt</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>