force-app/main/default/objects/Travel_Policy_Rule__mdt/fields/Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Description__c</fullName>
    <label>Rule Description</label>
    <type>Text</type>
    <length>255</length>
</CustomField>